# api/users/users.controllers.js
@@ -1,24 +1,17 @@
 const Joi = require("joi");
 const { v4: uuidv4 } = require("uuid");
 const jwt = require("jsonwebtoken");
-const sgMail = require("@sendgrid/mail");
-const path = require("path");
 const bcryptjs = require("bcryptjs");
-
-const { UnauthorizedError, NotFoundError } = require("../errors/ErrorMessage");
+const { UnauthorizedError } = require("../errors/ErrorMessage");
 const UserSchema = require("./users.schema");
-const {
-  hashPassword,
-  updateToken,
-  calcDailyCalories,
-} = require("./user.helpers");
-const {
-  getNotAllowedCategoryProducts,
-} = require("../products/products.helpers");
+const { hashPassword, calcDailyCalories } = require("./user.helpers");
+const { getNotAllowedCategoryProducts } = require("../products/products.helpers");
 
 require("dotenv").config();
 
 module.exports = class UserController {
+
+  // Registration
   static async register(req, res, next) {
     try {
       const verificationToken = uuidv4();
@@ -27,30 +20,12 @@ module.exports = class UserController {
       if (userExist) {
         return res.status(409).json({ message: "Such login is in use" });
       }
-
       const newUser = await UserSchema.create({
         name,
         login,
         password: await hashPassword(password),
         verificationToken,
       });
-
-      // // Send email
-      // sgMail.setApiKey(process.env.SENDGRID_API_KEY);
-      //
-      // const htmlLink = `<a href="http://localhost:${process.env.PORT}/users/verify/${verificationToken}"`;
-      // const htmlEmailMsgBody = `${emailBodyPartOne}${newUser.name},${emailBodyPartTwo}${htmlLink}${emailBodyPartThree}`;
-      //
-      // const msg = {
-      //   to: newUser.login,
-      //   from: process.env.EMAIL_SENDER,
-      //   subject: "Email varification",
-      //   text: "Please verify your email by the following link:",
-      //   html: htmlEmailMsgBody,
-      // };
-      //
-      // await sgMail.send(msg);
-
       return res.status(201).send({
         user: {
           _id: newUser._id,
@@ -63,6 +38,7 @@ module.exports = class UserController {
     }
   }
 
+  // Validate registration data
   static async validate(req, res, next) {
     const validationSchema = Joi.object({
       name: Joi.string().required(),
@@ -82,15 +58,13 @@ module.exports = class UserController {
       const { login, password } = req.body;
 
       const user = await UserSchema.findUserByLogin(login);
-      if (!user /*|| user.status !== "Verified"*/) {
+      if (!user) {
         return res.status(404).json({ message: "Login or password is wrong" });
-        // throw new NotFoundError("Email or password is wrong");
       }
 
       const isPasswordValid = await bcryptjs.compare(password, user.password);
       if (!isPasswordValid) {
         return res.status(404).json({ message: "Login or password is wrong" });
-        // throw new NotFoundError("Email or password is wrong");
       }
 
       const token = await jwt.sign({ id: user._id }, process.env.JWT_SECRET, {
@@ -111,15 +85,12 @@ module.exports = class UserController {
     }
   }
 
-  //middleware для валидации token
+  //Validate Token
   static async authorize(req, res, next) {
     try {
-      // 1. витягнути токен користувача з заголовка Authorization
       const authorizationHeader = req.get("Authorization") || "";
       const token = authorizationHeader.replace("Bearer ", "");
 
-      // 2. витягнути id користувача з пейлоада або вернути користувачу
-      // помилку зі статус кодом 401
       let userId;
       try {
         userId = await jwt.verify(token, process.env.JWT_SECRET).id;
@@ -127,44 +98,13 @@ module.exports = class UserController {
         next(new UnauthorizedError());
       }
 
-      // 3. витягнути відповідного користувача. Якщо такого немає - викинути
-      // помилку зі статус кодом 401
-      // userModel - модель користувача в нашій системі
       const user = await UserSchema.findById(userId);
-
       if (!user || user.token !== token) {
         throw new UnauthorizedError();
       }
-
-      // 4. Якщо все пройшло успішно - передати запис користувача і токен в req
-      // і передати обробку запиту на наступний middleware
       req.user = user;
       req.token = token;
       next();
-    } catch (err) {
-      next(err);
-    }
-  }
-
-  // Verify email
-  static async verifyEmail(req, res, next) {
-    try {
-      const { verificationToken } = req.params;
-      const userToVerify = await UserSchema.findByVerificationToken(
-        verificationToken
-      );
-
-      if (!userToVerify) {
-        throw new NotFoundError();
-      }
-
-      await UserSchema.verifyUser(userToVerify._id);
-
-      return res
-        .status(200)
-        .sendFile(path.join(__dirname, "../public/index.html"));
-
-      // return res.status(200).send("Your accout is successfully verified");
     } catch (err) {
       next(err);
     }
@@ -179,6 +119,9 @@ module.exports = class UserController {
           login: user.login,
           name: user.name,
           _id: user._id,
+          summary: user.summary,
+          dayNormCalories: user.dayNormCalories,
+          notAllowedCategories: user.notAllowedCategories,
         },
       });
     } catch (err) {
@@ -190,13 +133,14 @@ module.exports = class UserController {
   static async logout(req, res, next) {
     try {
       const user = req.user;
-      await updateToken(user._id, null);
+      await UserSchema.updateToken(user._id, null);
       return res.status(204).json();
     } catch (err) {
       next(err);
     }
   }
 
+  // Validate login data
   static validateUserLoginAndPassword(req, res, next) {
     const validationSchema = Joi.object({
       login: Joi.string().required(),
@@ -208,8 +152,9 @@ module.exports = class UserController {
     }
     next();
   }
-
-  static async getSlim(req, res, next) {
+  
+  //Add summary, return notAllowed category of products, summary
+  static async dailyCaloriesPrivate(req, res, next) {
     try {
       const {body, user} = req;
       const userToUpdate = await UserSchema.findByIdUpdateSummary(user._id, body);
@@ -220,6 +165,7 @@ module.exports = class UserController {
     }
   }
 
+  // Validate calculate data
   static async validateDailyCaloriesParams(req, res, next) {
     const validationSchema = Joi.object({
       currentWeight: Joi.number().required(),
@@ -235,7 +181,8 @@ module.exports = class UserController {
     next();
   }
 
-  static async dailyCalories(req, res, next) {
+  // Daily calories & prohibited food categories
+  static async dailyCaloriesPublic(req, res, next) {
     try {
       const { currentWeight, height, age, targetWeight, bloodType } = req.body;
 
@@ -249,8 +196,6 @@ module.exports = class UserController {
       const prohibitedFoodCategories = await getNotAllowedCategoryProducts(
         bloodType
       );
-
-      console.log("Here is:", prohibitedFoodCategories);
       return res.status(200).json({
         dayNormCalories: dailyCal,
         notAllowedCategories: prohibitedFoodCategories,
